tests/errors/continue_in_ordinary_function_in_block.dang
# An ordinary nested function must not inherit the enclosing block invocation's continue target
pub result = [1].map { x =>
  let bad: Int! {
    continue 1
  }
  x
}
